--- a/assignment_1/table_manager.html
+++ b/assignment_1/table_manager.html
@@ -9,8 +9,7 @@
 
 <!-- Data -->
 <script>
-
-// Don't copy this to any other places in this file. You can just use the "organizations" variable to do your assignment. 
+// Don't copy this to any other places in this file. You can just use the "organizations" variable to do your assignment.
 var organizations = [
 	 {
         "Region": "East Asia & Pacific",
@@ -19,7 +18,7 @@ var organizations = [
         "Organization Name": "200 Square",
         "Organization Type": "For-profit",
         "Sectors": "Housing, construction & real estate",
-        "Description": "200 Square is an online real estate agent in New Zealand.",        
+        "Description": "200 Square is an online real estate agent in New Zealand.",
         "City": "Wellington",
         "State/Region": "Wellington",
         "Founding Year": 2010,
@@ -34,7 +33,7 @@ var organizations = [
         "Organization Name": "21c Consultancy",
         "Organization Type": "For-profit",
         "Sectors": "IT and geospatial",
-        "Description": "21c is ICT innovation consultancy which advises international actors, institutions and governments around the world on technological trends which can affect the way they deliver services.",        
+        "Description": "21c is ICT innovation consultancy which advises international actors, institutions and governments around the world on technological trends which can affect the way they deliver services.",
         "City": "London",
         "State/Region": "",
         "Founding Year": 2015,
@@ -49,7 +48,7 @@ var organizations = [
         "Organization Name": "2GIS",
         "Organization Type": "For-profit",
         "Sectors": "IT and geospatial",
-        "Description": "2GIS is a city information service combined with a map. ",        
+        "Description": "2GIS is a city information service combined with a map. ",
         "City": "Novosibirsk",
         "State/Region": "Novosibirsk Oblast",
         "Founding Year": 1999,
@@ -64,7 +63,7 @@ var organizations = [
         "Organization Name": "2nd City Zoning",
         "Organization Type": "Nonprofit",
         "Sectors": "Housing, construction & real estate",
-        "Description": "An Open City App, 2nd City Zoning is an interactive map that lets you find out how your building is zoned, learn where to locate your business and explore zoning patterns throughout the city.",        
+        "Description": "An Open City App, 2nd City Zoning is an interactive map that lets you find out how your building is zoned, learn where to locate your business and explore zoning patterns throughout the city.",
         "City": "Chicago",
         "State/Region": "Illinois",
         "Founding Year": 2013,
@@ -94,7 +93,7 @@ var organizations = [
         "Organization Name": "360 Yield Center",
         "Organization Type": "For-profit",
         "Sectors": "Agriculture",
-        "Description": "Taking a 360-degree view of key yield-limiting variables, 360 Yield Center develops strategies for better-performing crops and better on-farm profits.",        
+        "Description": "Taking a 360-degree view of key yield-limiting variables, 360 Yield Center develops strategies for better-performing crops and better on-farm profits.",
         "City": "Morton",
         "State/Region": "Illinois",
         "Founding Year": 2014,
@@ -124,7 +123,7 @@ var organizations = [
         "Organization Name": "3Tier (Europe) ",
         "Organization Type": "For-profit",
         "Sectors": "Energy and climate",
-        "Description": "3TIER is a global environmental and industrial measurement company providing weather-driven renewable energy risk assessment and forecasting for wind, solar, and hydro power projects.",        
+        "Description": "3TIER is a global environmental and industrial measurement company providing weather-driven renewable energy risk assessment and forecasting for wind, solar, and hydro power projects.",
         "City": "Helsinki",
         "State/Region": "Uusimaa",
         "Founding Year": 2012,
@@ -139,7 +138,7 @@ var organizations = [
         "Organization Name": "5PSolutions",
         "Organization Type": "For-profit",
         "Sectors": "IT and geospatial",
-        "Description": "5PSolutions are artisans of mobile platforms.",       
+        "Description": "5PSolutions are artisans of mobile platforms.",
         "City": "Fairfax",
         "State/Region": "Virginia",
         "Founding Year": 2007,
@@ -154,7 +153,7 @@ var organizations = [
         "Organization Name": "AAA National",
         "Organization Type": "Other",
         "Sectors": "Transportation and logistics",
-        "Description": "AAA provides services such as travel, automotive, insurance, financial, and discounts.",        
+        "Description": "AAA provides services such as travel, automotive, insurance, financial, and discounts.",
         "City": "Irving",
         "State/Region": "Texas",
         "Founding Year": 1902,
@@ -184,7 +183,7 @@ var organizations = [
         "Organization Name": "ABRELATAM",
         "Organization Type": "Nonprofit",
         "Sectors": "Governance",
-        "Description": "ABRELATAM is an conference that seeks to accelerate the process of opening information through Open Data transparency and promote the Latin America.",        
+        "Description": "ABRELATAM is an conference that seeks to accelerate the process of opening information through Open Data transparency and promote the Latin America.",
         "City": "Santiago",
         "State/Region": "",
         "Founding Year": 2015,
@@ -192,7 +191,7 @@ var organizations = [
         "Type of Data Used": "",
         "profileID": "1687"
     }
-	
+
 ];
 </script>
 
@@ -204,10 +203,103 @@ var organizations = [
 
 <script>
 // outputs the first item of the organizations array. Just for testing.
-console.log(organizations[0]); 
+console.log(organizations[0]);
+var mytable = document.createElement('table');
+var orgtable = document.getElementById('org_table');
+orgtable.appendChild(mytable);
+
+
 
 // Your JavaScript code goes here
+var nonprofitcount = 0
+for(i=0; i<organizations.length; i++) {
+	if(organizations[i]["Organization Type"]==="Nonprofit"){
+		{
+			nonprofitcount++
+		}
+		console.log(nonprofitcount);
+	}
+}
+var nonprofitrow = document.createElement('tr');
+mytable.appendChild(nonprofitrow);
+var cell1 = document.createElement('td');
+cell1.innerHTML = 'How many non-profit organizations are listed?';
+var cell2 = document.createElement('td');
+cell2.innerHTML = nonprofitcount;
+nonprofitrow.appendChild(cell1);
+nonprofitrow.appendChild(cell2);
 
+var age = 0
+for(i=0; i<organizations.length; i++) {
+	if(organizations[i]["Founding Year"] <= 2008){
+		{
+			age++
+		}
+		console.log(age);
+	}
+}
+var agerow = document.createElement('tr');
+mytable.appendChild(agerow);
+var cell3 = document.createElement('td');
+cell3.innerHTML = 'How many organizations are less than 10 years old?';
+var cell4 = document.createElement('td');
+cell4.innerHTML = age;
+agerow.appendChild(cell3);
+agerow.appendChild(cell4);
+
+var northamerican = 0
+for(i=0; i<organizations.length; i++) {
+	if(organizations[i]["Region"]==="North America"){
+		{
+			northamerican++
+		}
+		console.log(northamerican);
+	}
+}
+var regionrow = document.createElement('tr');
+mytable.appendChild(regionrow);
+var cell5 = document.createElement('td');
+cell5.innerHTML = 'How many of these organizations are North American?';
+var cell6 = document.createElement('td');
+cell6.innerHTML = northamerican;
+regionrow.appendChild(cell5);
+regionrow.appendChild(cell6);
+
+var transportation = 0
+for(i=0; i<organizations.length; i++) {
+	if(organizations[i]["Type of Data Used"].includes("Transportation")){
+		{
+			transportation++
+		}
+		console.log(transportation);
+	}
+}
+var transportrow = document.createElement('tr');
+mytable.appendChild(transportrow);
+var cell7 = document.createElement('td');
+cell7.innerHTML = 'How many organizations used the Transportation type of data?';
+var cell8 = document.createElement('td');
+cell8.innerHTML = transportation;
+transportrow.appendChild(cell7);
+transportrow.appendChild(cell8);
+
+var size = 0
+for(i=0; i<organizations.length; i++) {
+	if(organizations[i]["Size"]==="51 to 200"){
+		{
+			size++
+		}
+		console.log(size);
+	}
+}
+var sizerow = document.createElement('tr');
+mytable.appendChild(sizerow);
+var cell9 = document.createElement('td');
+cell9.innerHTML = 'How many organizations fall within the size of 51 to 200?';
+var cell10 = document.createElement('td');
+cell10.innerHTML = transportation;
+sizerow.appendChild(cell9);
+sizerow.appendChild(cell10);
 
 </script>
 
